visual bug: align listing card msg

--- a/src/components/marketplace/MarketplaceListings/ListingCard/ListingCard.component.css
+++ b/src/components/marketplace/MarketplaceListings/ListingCard/ListingCard.component.css
@@ -48,13 +48,21 @@
     margin-left: 1%;
     margin-right: 2%;
     padding-bottom: 50px;
-    padding-top: 50px;
+    padding-top: 30px;
 }
 
-.listing-msg {
-    margin-top: 20px;
+.listing-msg-container {
+    height: 322px;
     font-stretch: normal;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0rem;
     font-size: 12px;
+}
+
+.listing-msg {
+    width: 55%;
+    vertical-align: middle;
+    display: inline-block;
+    line-height: 25px;
+    margin-top: 20px;
 }
